--- a/stvsystem/stvsystem/Views/Credential/Index.cshtml
+++ b/stvsystem/stvsystem/Views/Credential/Index.cshtml
@@ -3,18 +3,18 @@
     ViewData["Title"] = "Գաղտնաբառեր";
 }
 
-@*@if (Model != null && Model.SelectionStatus == (stvsystem.Data.SettingStatus)1)*@
 @if (Model != null && Model.SelectionStatus == SettingStatus.InPreparation)
-    {
+{
     @model stvsystem.Data.Setting
     <div class="for-Toolbar">
         @(Html.Kendo().ToolBar()
         .Name("ToolBar")
         .Items(items =>
         {
-            items.Add().Template("<button type=\"button\" name=\"Details\" onclick=\"Detalis()\" class=\"btn btn-primary btn-sm\"><i class=\"fa fa-file-pdf-o\"></i>&nbsp; Տպել</button>");
-            items.Add().Template("<input id=\"start\" type=\"number\" placeholder=\"սկիզբ\" class=\"k-textbox\" />");
-            items.Add().Template("<input id=\"end\" type=\"number\" placeholder=\"ավարտ\" class=\"k-textbox\" />");
+            items.Add().Template("<button type=\"button\" name=\"Details\" onclick=\"Detalis()\" class=\"btn btn-sm btn-primary\"><i class=\"fa fa-file-pdf-o\"></i>&nbsp; Արտահանել</button>");
+            items.Add().Template("<input id=\"start\" type=\"number\" placeholder=\"սկիզբ\" class=\"k-textbox k-numerictextbox\" style=\"height:31px\"/>");
+            items.Add().Template("<input id=\"end\" type=\"number\" placeholder=\"ավարտ\" class=\"k-textbox\" style=\"height:31px\"/>");
+
         })
         )
         @* Search Panel - Right Slide *@
@@ -25,10 +25,10 @@
                 <div class="slidePanel-Content-fields create-item">
                     <h4>Որոնման դաշտեր</h4>
                     <div class="form-group margin-10-0">
-                        <input type="number" id="idStr" class="k-textbox width100" />
+                        <input type="number" id="idStr" placeholder="հ/հ" class="k-textbox k-numerictextbox width100" />
                     </div>
                     <div class="form-group margin-10-0">
-                        <input type="text" id="pass" class="k-textbox width100" />
+                        <input type="text" id="pass" placeholder="գաղտնաբառ" class="k-textbox width100" />
                     </div>
                     <div class="form-group margin-10-0 align-right">
                         <button type="submit" id="btnSearch" class="btn btn-primary btn-sm" onclick="return Search();"><i class="icons icon-magnifier"></i>&nbsp;Որոնել</button>
@@ -65,24 +65,6 @@
             var end = $("#end").val();
             window.location = '@Url.Action("Detail", "Credential")/?start=' + start + '&end=' + end;
         }
-
-    @*function InsertCredential() {
-        window.location = '@Url.Action("Template", "Credential")';
-    }*@
-
-    @*function UpdateCredential(e) {
-        var row = $(e.target).closest("tr");
-        var grid = $("#grCredential").data("kendoGrid");
-        var dataItem = grid.dataItem(row);
-        window.location = '@Url.Action("Template", "Credential")/?credentialID=' + dataItem.CredentialID;
-    }*@
-
-    @*function DeleteCredential(e) {
-        var row = $(e.target).closest("tr");
-        var grid = $("#grCredential").data("kendoGrid");
-        var dataItem = grid.dataItem(row);
-        window.location = '@Url.Action("DeleteConfirmation", "Credential")/?credentialID=' + dataItem.CredentialID;
-    }*@
     </script>
 
     @(Html.Kendo().Grid<stvsystem.Data.CredentialItem>()
@@ -92,11 +74,6 @@
                   {
                       columns.Bound(c => c.CredentialID).Width(100);
                       columns.Bound(c => c.Password);
-                      //columns.Command(commands =>
-                      //{
-                      //    commands.Custom("cmdUpdateCredential").Text(" ").Click("UpdateCredential").HtmlAttributes(new { @class = "Update_Icon" });
-                      //    commands.Custom("cmdDeleteCredential").Text(" ").Click("DeleteCredential").HtmlAttributes(new { @class = "Delete_Icon" });
-                      //}).Title("Հրամաններ").Width(120);
                   })
                   .Events(e => e.DataBound("showCommandIcons"))
                   .Sortable()
@@ -115,13 +92,37 @@
 }
 else
 {
-    <div class="container-maxwidth500">
-        <div class="card card-accent-warning">
+    <div class="margin-15 full-height">
+        <div class="card height100">
             <div class="card-header">
-                Ուշադրություն
+                <i class="icon icon-info"></i> Ուշադրություն
             </div>
             <div class="card-body">
-                Ծածկագրերը դիտման և տպագրման համար ներկա փուլում հասանելի չեն
+                <div class="maxwidth500 row">
+                    <div class="col-12 col-md-12">
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="h1 text-warning text-left mb-4">
+                                    <i class="icon icon-info"></i>
+                                </div>
+                                <div class="h4 mb-0 text-warning">Ծածկագրերը դիտման և տպագրման համար ներկա փուլում հասանելի չեն:</div>
+                                <br />
+                                @if (Model != null && Model.SelectionStatus == SettingStatus.Finished)
+                                {
+                                    <small class="text-muted">Քվեարկությունն ավարտված է</small>
+                                }
+                                else if (Model != null && Model.SelectionStatus == SettingStatus.InProcess)
+                                {
+                                    <small class="text-muted">Քվեարկությունն ընթացքի մեջ է</small>
+                                }
+                                else
+                                {
+                                    <small class="text-muted">Դեռևս ստեղծված չեն կարգավորումներ</small>
+                                }
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
