--- a/stvsystem/stvsystem/Views/Shared/_Layout.cshtml
+++ b/stvsystem/stvsystem/Views/Shared/_Layout.cshtml
@@ -62,7 +62,6 @@
         <div id="status"></div>
     </div>
     <header class="app-header navbar">
-
         <button class="navbar-toggler mobile-sidebar-toggler d-lg-none mr-auto" type="button">☰</button>
         <a class="navbar-brand" href="@Url.Action("", "")">STV</a>
         <button class="navbar-toggler sidebar-minimizer d-md-down-none" type="button">☰</button>
@@ -80,27 +79,27 @@
             <nav class="sidebar-nav">
                 <ul class="nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="@Url.Action("Index", "Setting")"><i class="fa fa-cog"></i> Կարգավորումներ</a>
+                        <a class="nav-link" href="@Url.Action("Index", "Setting")"><i class="fa fa-sliders"></i> Կարգավորումներ</a>
                     </li>
                     <li class="divider"></li>
                     <li class="nav-item">
-                        <a class="nav-link" href="@Url.Action("Index", "Candidate")"><i class="fa fa-circle-thin"></i> Թեկնածուներ</a>
+                        <a class="nav-link" href="@Url.Action("Index", "Candidate")"><i class="icon icon-user-following"></i> Թեկնածուներ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="@Url.Action("Index", "Judge")"><i class="fa fa-circle-thin"></i> Դատական խորհուրդ</a>
+                        <a class="nav-link" href="@Url.Action("Index", "Judge")"><i class="fa fa-mortar-board"></i> Դատական խորհուրդ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="@Url.Action("Index", "Credential")"><i class="fa fa-circle-thin"></i> Ծածկագրեր</a>
+                        <a class="nav-link" href="@Url.Action("Index", "Credential")"><i class="icon icon-key"></i> Ծածկագրեր</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="@Url.Action("Index", "Monitoring")"><i class="fa fa-circle-thin"></i> Մոնիթորինգ</a>
+                        <a class="nav-link" href="@Url.Action("Index", "Monitoring")"><i class="fa fa-tv"></i> Մոնիթորինգ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="@Url.Action("Index", "Summary")"><i class="fa fa-circle-thin"></i> Տվյալների ամփոփում</a>
+                        <a class="nav-link" href="@Url.Action("Index", "Summary")"><i class="fa fa-file-text-o"></i> Տվյալների ամփոփում</a>
                     </li>
                     <li class="divider"></li>
                     <li class="nav-item">
-                        <a class="nav-link" href="@Url.Action("Index", "Selection")"><i class="fa fa-circle-thin"></i> Ընտրություն</a>
+                        <a class="nav-link" href="@Url.Action("Index", "Selection")"><i class="fa fa-check-square-o"></i> Քվեարկություն</a>
                     </li>
                     <li class="divider"></li>
                     <li class="nav-item">
