--- a/stvsystem/stvsystem/Views/Candidate/Template.cshtml
+++ b/stvsystem/stvsystem/Views/Candidate/Template.cshtml
@@ -1,6 +1,6 @@
 ﻿@model stvsystem.Data.CandidateItem
 @{
-    ViewData["Title"] = "Դատավոր";
+    ViewData["Title"] = "Թեկնածու";
     Layout = "~/Views/Shared/_LayoutNull.cshtml";
 }
 
@@ -11,7 +11,10 @@
     @Html.HiddenFor(model => model.CandidateID)
     <div class="container-maxwidth500">
         <div class="card">
-            <div class="card-header">@ViewData["Title"]</div>
+            <div class="card-header">
+                <i class="icon icon-user-following"></i>
+                @ViewData["Title"]
+            </div>
             <div class="card-body">
                 <div class="form-group">
                     @Html.LabelFor(model => model.FirstName, new { @class = "control-label" })
@@ -62,11 +65,12 @@
                         .BindTo(ViewBag.vbSpecializations)
                     )
                 </div>
-            </div>
-            <div class="card-footer">
-                <button type="submit" id="btnSave" class="btn btn-sm btn-primary"><i class="icons icon-check"></i>&nbsp;Հիշել</button>
-                <button type="button" class="btn btn-sm btn-secondary" onclick="location.href='@Url.Action("Index", "Candidate")'"><i class="icons icon-close"></i>&nbsp;Չեղարկել</button>
-                @Html.ValidationSummary("Առկա են խնդիրներ")
+                <hr />
+                <div class="align-right">
+                    <button type="submit" id="btnSave" class="btn btn-primary"><i class="icons icon-check"></i>&nbsp;Հիշել</button>
+                    <button type="button" class="btn btn-secondary" onclick="location.href='@Url.Action("Index", "Candidate")'"><i class="icons icon-close"></i>&nbsp;Չեղարկել</button>
+                    @Html.ValidationSummary("Առկա են խնդիրներ")
+                </div>
             </div>
         </div>
     </div>
