--- a/stvsystem/stvsystem/Views/Selection/Index.cshtml
+++ b/stvsystem/stvsystem/Views/Selection/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using  stvsystem.Data
 @model PasswordItem
 @{
-    ViewData["Title"] = "Ընտրություն";
+    ViewData["Title"] = "Քվեարկություն";
     Layout = "~/Views/Shared/_LayoutNull.cshtml";
 }
 
@@ -15,7 +15,9 @@
 
     <div class="container-maxwidth500">
         <div class="card">
-            <div class="card-header">@ViewData["Title"]</div>
+            <div class="card-header">
+            <i class="fa fa-check-square-o"></i>
+            @ViewData["Title"]</div>
             <div class="card-body">
                 <div class="form-group">
                     <label class="control-label">Մուտքագրեք Ձեր վեցանիշ գաղտնաբառը</label>
@@ -23,11 +25,11 @@
                     @Html.ValidationMessageFor(model => model.Password)
                 </div>
             </div>
-            <div class="card-footer">
-                <button type="submit" id="SubmitButton" class="btn btn-sm btn-primary"><i class="icons icon-check"></i>&nbsp;Մուտք</button>
-                <button type="button" onclick="location.href='@Url.Action("Index", "Selection")'" class="btn btn-sm btn-secondary"><i class="icons icon-close"></i>&nbsp;Չեղարկել</button>
+            <div class="col-lg-12 align-right">
+                <hr />
+                <button type="submit" id="SubmitButton" class="btn btn-primary"><i class="icons icon-check"></i>&nbsp;Մուտք</button>
+                <button type="button" onclick="location.href='@Url.Action("Index", "Selection")'" class="btn btn-secondary"><i class="icons icon-close"></i>&nbsp;Չեղարկել</button>
                 @Html.ValidationSummary("Առկա են խնդիրներ")
-
             </div>
         </div>
     </div>
