--- a/stvsystem/stvsystem/Views/Setting/Initialize.cshtml
+++ b/stvsystem/stvsystem/Views/Setting/Initialize.cshtml
@@ -1,20 +1,28 @@
 ﻿@using  stvsystem.Data
 @model SettingItem
-
+@{
+    ViewData["Title"] = "Սկսել քվեարկությունը";
+    Layout = "~/Views/Shared/_LayoutNull.cshtml";
+}
 
 @using (Html.BeginForm("StartSelection", "Setting", FormMethod.Post, new { id = "frmInitialize" }))
 {
     @Html.HiddenFor(model => model.SettingID)
     @Html.HiddenFor(model => model.SelectionStatus)
-
-    <div class="container-maxwidth500">
-        <div class="card">
+    <div class="container-maxwidth500 full-height">
+        <div class="card height100">
             <div class="card-header">
+                <i class="fa fa-check-square-o"></i>
                 Ցանկանում եք սկսե՞լ քվեարկությունը
             </div>
-            <div class="card-footer">
-                <button type="submit" id="SubmitButton" class="btn btn-sm btn-success"><i class="icons icon-arrow-right"></i>&nbsp;Սկսել</button>
-                <button type="button" class="btn btn-sm btn-secondary" onclick="location.href='@Url.Action("Index", "Setting")'"><i class="icons icon-close"></i>&nbsp;Չեղարկել</button>
+            <div class="card-body">
+                <div class="maxwidth500">
+                    <button type="submit" id="SubmitButton" class="btn btn-success"><i class="icons icon-arrow-right"></i>&nbsp;Սկսել քվեարկությունը</button>
+                    <hr />
+                    <div class="align-right">
+                        <button type="button" class="btn btn-secondary" onclick="location.href='@Url.Action("Index", "Setting")'"><i class="icons icon-close"></i>&nbsp;Չեղարկել</button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
